--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Nav Bar -->
 <nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <img src="/Photos/chevron-bar-expand.svg" class="svg">
+    <img src="chevron-bar-expand.svg" class="svg">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="col-6 d-flex justify-content-center align-items-center">
-        <img src="/Photos/—Pngtree—developers are coding programs on_14867886.png" class="program-photo">
+        <img src="—Pngtree—developers are coding programs on_14867886.png" class="program-photo">
       </div>
     </div>
   </div>
