--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="col-6 d-flex justify-content-center align-items-center">
-        <img src="—Pngtree—developers are coding programs on_14867886.png" class="program-photo">
+        <img src="program.png.png" class="program-photo">
       </div>
     </div>
   </div>
